# EviDelta

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
deploy/: README.md  feishu-agent-bot.service  feishu-agent-gateway.service  feishu-agent-temporal-dev.service  feishu-agent-worker.service
scripts/: README.md  build_e2e_fixtures.py  check_temporal.sh  install.sh  install_systemd.sh  smoke_monitoring_schedule_reuse.py  start.sh  start_all.sh  start_gateway.sh  start_temporal_dev.sh  start_temporal_worker.sh  status.sh  status_all.sh  stop.sh  stop_all.sh  test_dynamic_report_update.sh  test_monitoring_cycle.sh  test_monitoring_schedule.sh  test_multiformat_ingestion.sh  test_pdf_delivery.sh  test_professional_analysis.sh  test_temporal_recovery.sh  wait_temporal.sh
tests/: conftest.py  test_acquisition_pipeline.py  test_alpha_e2e_fixtures.py  test_analysis_skills.py  test_analysis_tools.py  test_artifacts_and_report.py  test_backend_factory.py  test_cli.py  test_cli_monitor.py  test_command_router.py  test_config.py  test_error_taxonomy.py  test_event_handler.py  test_event_queue.py  test_feishu_client.py  test_instance_lock.py  test_job_queue.py  test_latex_pdf.py  test_llm_provider.py  test_logging_config.py  test_message_parser.py  test_monitoring_modules.py  test_monitoring_scheduler.py  test_patch_validator.py  test_professional_artifacts.py  test_report_patcher.py  test_repository.py  test_research_agent.py  test_research_content.py  test_research_reasoning.py  test_research_safety.py  (+8 more)
(+110 files in other folders)
